<resources>
    <string name="app_name">Calculator</string>
    <string name="calculator_text">0</string>
    <string name="division">/</string>
    <string name="digit_nine">9</string>
    <string name="digit_eight">8</string>
    <string name="digit_seven">7</string>
    <string name="digit_four">4</string>
    <string name="digit_five">5</string>
    <string name="digit_six">6</string>
    <string name="multiplication">*</string>
    <string name="digit_one">1</string>
    <string name="digit_two">2</string>
    <string name="digit_three">3</string>
    <string name="subtraction">-</string>
    <string name="digit_zero">0</string>
    <string name="clear">CLR</string>
    <string name="addition">+</string>
    <string name="equal">=</string>
    <string name="digit_decimal">.</string>
    <string name="syntax_error">Syntax Error</string>
</resources>