<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/textBackground"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:text="@string/calculator_text"
        android:textSize="48sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="2dp">

        <Button
            android:id="@+id/btnSeven"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/digit_seven" />

        <Button
            android:id="@+id/btnEight"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/digit_eight" />

        <Button
            android:id="@+id/btnNine"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/digit_nine" />

        <Button
            android:id="@+id/btnDivide"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/division" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="2dp">

        <Button
            android:id="@+id/btnFour"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/digit_four" />

        <Button
            android:id="@+id/btnFive"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/digit_five" />

        <Button
            android:id="@+id/btnSix"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/digit_six" />

        <Button
            android:id="@+id/btnMultiply"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/multiplication" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="2dp">

        <Button
            android:id="@+id/btnOne"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/digit_one" />

        <Button
            android:id="@+id/btnTwo"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/digit_two" />

        <Button
            android:id="@+id/btnThree"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/digit_three" />

        <Button
            android:id="@+id/btnSubtract"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/subtraction" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="2dp">

        <Button
            android:id="@+id/btnZero"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:onClick="onDigit"
            android:text="@string/digit_zero" />

        <Button
            android:id="@+id/btnClear"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/clear" />

        <Button
            android:id="@+id/btnAdd"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/addition" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="2dp">

        <Button
            android:id="@+id/btnEqual"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/equal" />

    </LinearLayout>


</LinearLayout>